--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -120,6 +120,7 @@
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/nomenclature?type=production" title="Продукция">Продукция</a></li>
                                     <li><hr class="dropdown-divider"></li>	
+                                    <li><a tabindex="-1" class="dropdown-item" href="/admin/sales_manager" title="Скидки">Скидки</a></li>
                                     <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=print_menu" title="Просмотр технологических карт">Просмотр технологических карт</a></li> -->
                                             
                                 </ul>
