--- a/public/sales_manager.ejs
+++ b/public/sales_manager.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/helpmix.css">
     <link rel="icon" href="/jpgs/favicon.ico">
 
-    <title>Скидки | Cherry Music Bar</title>
+    <title>Акции | Cherry Music Bar</title>
 </head>
 <style>
     .container {
@@ -83,19 +83,28 @@ body {
     <div class="container">
         <div id="error_div"></div>
         <div class="page-header">
-            <h1 class="fw-bold fs-2"> Редактор производств </h1>
+            <h1 class="fw-bold fs-2"> Редактор акций </h1>
         </div>
         <table class="table table-striped table-bordered">
             <tbody>
                 <tr>
-                    <td colspan="5"><a class="btn btn-success" href="/admin/sales_manager/sale_edit">Создать скидку</a></td>
+                    <td colspan="5"><a class="btn btn-success" href="/admin/sales_manager/sale_edit">Создать акцию</a></td>
                 </tr>
                 <% if(locals.sales) {%>
                     <% sales.forEach(sale => { %>
                         <tr>
                             <td><%= sale.name %></td>
-                            <td><%= sale.sale %> <span>%</span></td>
-                            <td>До <%= sale.expiredIn %></td>
+                            <td>
+                                <%= sale.sale %> 
+                                <span>%</span>
+                            </td>
+                            <% const saleExpired = new Date(sale.expiredIn) < new Date(); %>
+                            <td>
+                                <% if(saleExpired) {%>
+                                    <span style="color: red;">Истекла! </span>
+                                <% } %>
+                                До <%= sale.expiredIn %>
+                            </td>
                             <td style="width:60px;">
                                 <a href="/admin/sales_manager/sale_edit?sale_id=<%= sale.id%>" class="btn btn-success">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
