--- a/public/tables.ejs
+++ b/public/tables.ejs
@@ -108,8 +108,7 @@ body {
 <body id="">
     <%- include('upmenu_crm') %>
     <div class="container">
-        <div class="row">
-            
+        <div class="row"> 
             <div class="col" style="max-width: 200px;">
                 <% tables.forEach((table, index) => {%>
                     <% for(let i=0; i<table.count; i++) { %>
@@ -180,6 +179,23 @@ body {
                             </div>
                         <% } %>
                     <%}%>
+                <% }); %>
+            </div>
+            <div class="col ml-auto" style="max-width: 200px; margin-left: auto;">
+                <div style="padding-bottom: 10px; padding-right: 10px;">
+                    <a href="/admin/sales_manager" class="btn btn-large btn-warning" style="width:90%">
+                        Действующие акции
+                        
+                    </a>
+                </div>
+                <% sales.forEach((sale, index) => {%>
+                    <div style="padding-bottom: 10px; padding-right: 10px;">
+                        <a href="/admin/sales_manager/sale_edit?sale_id=<%= sale.id %>" class="btn btn-large btn-danger" style="width:90%">
+                            <p><%= sale.name %></p>
+                            <p><%= sale.sale %> <span>%</span></p>
+                            
+                        </a>
+                    </div>
                 <% }); %>
             </div>
         </div>
