--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -1,8 +1,8 @@
 
 
 <div class="upMenu navbar navbar-static-top" style="width: 100%; display: block; padding: 0;">
-    <div class="navbar-inner">
-                <div class="btn-group">
+    <div class="navbar-inner" style="display: flex;">
+                <div class="btn-group navbar navbar-light">
                     <a class="btn btn-success" href="/admin/tables">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
@@ -21,7 +21,7 @@
                     
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle text-body" data-toggle="dropdown">
+                                <a href="#" class="dropdown-toggle text-body btn btn-secondary" style="margin-left: 5px; margin-right: 5px;" data-toggle="dropdown">
                                   Настройки
                                 </a>
                                 <ul class="dropdown-menu">
@@ -43,7 +43,7 @@
                             </li>
                                         
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <a href="#" class="dropdown-toggle btn btn-secondary" style="margin-left: 5px; margin-right: 5px;" data-toggle="dropdown">
                                     Работа с клиентом
                                 </a>
                                 <ul class="dropdown-menu">
@@ -83,7 +83,7 @@
                             </li> -->
                                     
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <a href="#" class="dropdown-toggle btn btn-secondary" style="margin-left: 5px; margin-right: 5px;" data-toggle="dropdown">
                                     Отчеты
                                 </a>
                                 <ul class="dropdown-menu">
@@ -96,7 +96,7 @@
                             </li>
                                     
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <a href="#" class="dropdown-toggle btn btn-secondary" style="margin-left: 5px; margin-right: 5px;" data-toggle="dropdown">
                                     Справочники
                                 </a>
                                 <ul class="dropdown-menu">
@@ -120,7 +120,7 @@
                             
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/nomenclature?type=production" title="Продукция">Продукция</a></li>
                                     <li><hr class="dropdown-divider"></li>	
-                                    <li><a tabindex="-1" class="dropdown-item" href="/admin/sales_manager" title="Скидки">Скидки</a></li>
+                                    <li><a tabindex="-1" class="dropdown-item" href="/admin/sales_manager" title="Акции">Акции</a></li>
                                     <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=print_menu" title="Просмотр технологических карт">Просмотр технологических карт</a></li> -->
                                             
                                 </ul>
