--- a/public/upmenu_crm.ejs
+++ b/public/upmenu_crm.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="upMenu navbar navbar-static-top" style="width: 100%; display: block; padding: 0;">
+<div class="upMenu navbar navbar-static-top" style="width: 100%; display: block; padding: 0; position:fixed;">
     <div class="navbar-inner" style="display: flex;">
                 <div class="btn-group navbar navbar-light">
                     <a class="btn btn-success" href="/admin/tables">
@@ -122,7 +122,7 @@
                                     <li><hr class="dropdown-divider"></li>	
                                     <li><a tabindex="-1" class="dropdown-item" href="/admin/sales_manager" title="Акции">Акции</a></li>
                                     <!-- <li><a tabindex="-1" class="dropdown-item" href="index.php?class_name=uchet&amp;act=print_menu" title="Просмотр технологических карт">Просмотр технологических карт</a></li> -->
-                                            
+                                    <li><a tabindex="-1" class="dropdown-item" href="/admin/stoplist_manager" title="Стоп-лист">Стоп-лист</a></li>
                                 </ul>
                             </li>
                              
@@ -132,6 +132,7 @@
                   
     </div>
   </div>
+  <div style="height: 50px;"></div>
 
 
 <!-- <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
