--- a/public/tables.ejs
+++ b/public/tables.ejs
@@ -181,7 +181,7 @@ body {
                     <%}%>
                 <% }); %>
             </div>
-            <div class="col ml-auto" style="max-width: 200px; margin-left: auto;">
+            <div class="col" style="max-width: 200px; margin-left: auto;">
                 <div style="padding-bottom: 10px; padding-right: 10px;">
                     <a href="/admin/sales_manager" class="btn btn-large btn-warning" style="width:90%">
                         Действующие акции
